--- a/algo_struct/lesson_6_hashing.ipynb
+++ b/algo_struct/lesson_6_hashing.ipynb
@@ -1437,6 +1437,216 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e06819d3-c0e0-4fae-bd20-282f1e1ac10b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BloomFilter {\n",
+    "private:\n",
+    "    float probality;\n",
+    "    int items;\n",
+    "    int bit_size;\n",
+    "    int size_128;\n",
+    "    int hash_count;\n",
+    "    char* bytes;\n",
+    "public:\n",
+    "    BloomFilter(int items_number, float false_prob);\n",
+    "    ~BloomFilter();\n",
+    "\n",
+    "    void add(string item);\n",
+    "    bool check(string item);\n",
+    "    int get_size(int items_number, float false_prob);\n",
+    "    int new_size(int items_number){\n",
+    "        if (items_number % 128 == 0)\n",
+    "            return  items_number;\n",
+    "        else\n",
+    "            return 128 * (items_number / 128 + 1);\n",
+    "    }\n",
+    "    int get_hash_count(int bit_array_size, int items_numbers);\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "bf38289e-0e39-4e4b-801c-8468bd905114",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BloomFilter::BloomFilter(int items_number, float false_prob){\n",
+    "    items = items_number;\n",
+    "    probality = false_prob;\n",
+    "    bit_size = get_size(items_number, false_prob);\n",
+    "    size_128 = new_size(bit_size);\n",
+    "    hash_count = get_hash_count(bit_size, items_number);\n",
+    "    bytes = new char [size_128 / 16];\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2cd406d0-5a0a-4811-989d-47a6ed1869d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BloomFilter::~BloomFilter(){\n",
+    "    delete [] bytes;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "20e144c6-614a-487e-9f85-2705b29b8095",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_35:4:9: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'MurmurHash3_x64_128'\u001b[0m\n",
+      "        MurmurHash3_x64_128(item.c_str(), item.size(), i, &tmp);\n",
+      "\u001b[0;1;32m        ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "void BloomFilter::add(string item){\n",
+    "    char tmp[16];\n",
+    "    for (int i = 0; i < size_128 / 16 ; i++){\n",
+    "        MurmurHash3_x64_128(item.c_str(), item.size(), i, &tmp);\n",
+    "        for (int j = 0; j < 16; j++)\n",
+    "            bytes[128 * i + j] = tmp[j] | bytes[128 * i + j];\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "90200c77-8cb3-46c7-80b6-ebc09d7dd2a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_36:4:9: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'MurmurHash3_x64_128'\u001b[0m\n",
+      "        MurmurHash3_x64_128(item.c_str(), item.size(), i, &tmp);\n",
+      "\u001b[0;1;32m        ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "bool BloomFilter::check(string item){\n",
+    "    char tmp[16];\n",
+    "    for (int i = 0; i < size_128 / 16 ; i++){\n",
+    "        MurmurHash3_x64_128(item.c_str(), item.size(), i, &tmp);\n",
+    "        for (int j = 0; j < 16; j++)\n",
+    "            if ((tmp[j] & bytes[128 * i + j]) != bytes[128 * i + j])\n",
+    "                return false;\n",
+    "    }\n",
+    "    return true;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e68677c0-f799-4e67-9cdc-ec362cc38e72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_37:2:52: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'LOG2'\u001b[0m\n",
+      "    float m = -(items_number * log(false_prob)) / (LOG2 * LOG2);\n",
+      "\u001b[0;1;32m                                                   ^\n",
+      "\u001b[0m\u001b[1minput_line_37:2:59: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'LOG2'\u001b[0m\n",
+      "    float m = -(items_number * log(false_prob)) / (LOG2 * LOG2);\n",
+      "\u001b[0;1;32m                                                          ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "int BloomFilter::get_size(int items_number, float false_prob){\n",
+    "    float m = -(items_number * log(false_prob)) / (LOG2 * LOG2);\n",
+    "    return int(m);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ad8220eb-9d56-4610-a56d-3ce8cb42599d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_38:2:50: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'LOG2'\u001b[0m\n",
+      "    float k = (bit_array_size / items_numbers) * LOG2;\n",
+      "\u001b[0;1;32m                                                 ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "int BloomFilter::get_hash_count(int bit_array_size, int items_numbers){\n",
+    "    float k = (bit_array_size / items_numbers) * LOG2;\n",
+    "    return int(k);\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a01414b6-2e94-4fe9-9534-e82b751cbbe1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "3e9fc2af-2a9f-4b0b-a6fe-b58e7c45e06a",
    "metadata": {},
