--- a/algo_struct/lesson_9_range_tree.ipynb
+++ b/algo_struct/lesson_9_range_tree.ipynb
@@ -553,6 +553,247 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2de8b71e-f212-4ad4-accc-14ce10ad4c60",
+   "metadata": {},
+   "source": [
+    "## Дерево Фенвика"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3582d0ca-0240-49cc-bf42-9745a5f1010b",
+   "metadata": {},
+   "source": [
+    "$$f[i] = \\sum_{j=p(x)}^{i}a[j]$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2cdb683-29f6-41bb-840b-1fd650020e83",
+   "metadata": {},
+   "source": [
+    " <center> p(x) = x & (x + 1) </center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3d38ed87-099a-4f6d-8524-9ce147c704f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include <vector>\n",
+    "using namespace std;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "80e18bac-d79f-446a-b7a4-43fb42e6a416",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BinaryIndexedTree {\n",
+    "private:\n",
+    "    vector<int> data;\n",
+    "    int _sum(int right);\n",
+    "public:\n",
+    "    BinaryIndexedTree(int size);\n",
+    "    ~BinaryIndexedTree();\n",
+    "    int sum(int from, int to);\n",
+    "    int inc(int index, int value);\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "72516eed-6664-4353-a369-cf15ce2daf6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BinaryIndexedTree::BinaryIndexedTree(int size) {\n",
+    "    data.resize(size);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "34179937-58fb-40bc-9efa-f4b9dcdc1bc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BinaryIndexedTree::~BinaryIndexedTree() {\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "33e88701-5d2c-4c91-805b-60da95070d51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int BinaryIndexedTree::_sum(int right){\n",
+    "    //int x = right - 1;\n",
+    "    int x = right;\n",
+    "    int res = 0;\n",
+    "    while (x >= 0){\n",
+    "        res += data[x];\n",
+    "        x = (x & (x + 1)) - 1;\n",
+    "    }\n",
+    "    return res;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "1c60699d-56eb-4dbc-ae97-df570f06fae9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int BinaryIndexedTree::sum(int from, int to){\n",
+    "    return _sum(to) - _sum(from);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "6c324633-0bc7-4b8d-826f-430e0a32a711",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_46:7:1: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mcontrol reaches end of non-void function [-Werror,-Wreturn-type]\u001b[0m\n",
+      "}\n",
+      "\u001b[0;1;32m^\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "int BinaryIndexedTree::inc(int index, int value){\n",
+    "    int i = index;\n",
+    "    while (i < data.size()){\n",
+    "        data[i] += value;\n",
+    "        i = i | (i + 1);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f301090-a96d-4484-88cc-58ff6e1e8ba5",
+   "metadata": {},
+   "source": [
+    "## Разряженные таблицы"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb59176f-a422-46bc-b019-7f7b85314b67",
+   "metadata": {},
+   "source": [
+    "$$min[i, j] = min(a[i ... i + 2^j - 1])$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd4a4c6d-b2a2-49d9-a483-92252b19bc12",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "074d152e-a1a9-4a88-9c98-aa9efa551045",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "f4d27b65-870d-49e6-9170-6ed7dafbfeb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SparseTable {\n",
+    "private:\n",
+    "    int size;\n",
+    "    vector<vector<int>> table;\n",
+    "public:\n",
+    "    SparseTable(int array[], int size);\n",
+    "    ~SparseTable();\n",
+    "    int min(int from, int to);\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e32be626-361e-4665-b9cc-8d9841ab9e36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SparseTable::SparseTable(int array[], int size){\n",
+    "\n",
+    "    int depth = (int)(log2(size) + 1);\n",
+    "    table.resize(size);\n",
+    "    for(int i=0; i<size; i++)\n",
+    "        table[i].resize(depth);\n",
+    "    this->size = size;\n",
+    "\n",
+    "    for (int i = 0; i < size; i++)\n",
+    "        table[i][0] = array[i];\n",
+    "\n",
+    "    for (int j = 1; (1 << j) <= size; j++) {\n",
+    "        for (int i = 0; (i + (1 << j) - 1) < size; i++) {\n",
+    "            int idx = i + (1 << (j - 1));\n",
+    "            if (table[i][j - 1] < table[idx][j - 1])\n",
+    "                table[i][j] = table[i][j - 1];\n",
+    "            else\n",
+    "                table[i][j] = table[idx][j - 1];\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "797ce2d7-d407-4fe0-bf6f-5cc61e17b8bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SparseTable::~SparseTable(){\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "9e6333a4-4a97-490f-a4fe-7664b9242d46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int SparseTable::min(int from, int to){\n",
+    "    int j = (int)log2(to - from + 1);\n",
+    "\n",
+    "    if (table[from][j] <= table[to - (1 << j) + 1][j])\n",
+    "        return table[from][j];\n",
+    "\n",
+    "    else\n",
+    "        return table[to - (1 << j) + 1][j];\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
