--- a/algo_struct/lesson_6_hashing.ipynb
+++ b/algo_struct/lesson_6_hashing.ipynb
@@ -1437,6 +1437,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "169f4c06-b311-4302-a5f1-57961b50132d",
+   "metadata": {},
+   "source": [
+    "p(ошибки) = 1 / m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1960d49-8b9b-486e-a244-a3544522e2d5",
+   "metadata": {},
+   "source": [
+    "m = 2 ^ k"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8dd0ebd-d3e4-4994-bb6c-19b0e186cc92",
+   "metadata": {},
+   "source": [
+    "k -  бит информации, ошибка $log(\\frac{1}{2^k})$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa7c38a6-e553-4140-ab16-ce8dce66278f",
+   "metadata": {},
+   "source": [
+    "$$k = log_2(1/\\epsilon)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6313bba-93b2-4983-bd48-f7b2ad614fb8",
+   "metadata": {},
+   "source": [
+    "$\\epsilon$ - вероятность ошибки, k - кол-во бит"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25ef53a3-04b8-4dc5-a64e-c202f8726844",
+   "metadata": {},
+   "source": [
+    "$$m = 2kn$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec450cf4-ab0a-42d7-b641-def7f7907418",
+   "metadata": {},
+   "source": [
+    "k - кол-во бит, n - кол-во слов в словаре, m - ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "491f84be-c7ba-4902-8874-19f51cea827d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c9b105c-1fdc-469b-a603-290c7a222442",
+   "metadata": {},
+   "source": [
+    "n = 10000, e = 1 / 2^20"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2c69e6a-c085-4260-9481-8dc69bad67c9",
+   "metadata": {},
+   "source": [
+    "k = 20"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a777971f-3ae1-4fa4-a407-cae9f3afd919",
+   "metadata": {},
+   "source": [
+    "m = 400000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba37ca9d-2c1e-4112-ad71-19f2fbc3d7d7",
+   "metadata": {},
+   "source": [
+    "примерно 50 кбайт"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "e06819d3-c0e0-4fae-bd20-282f1e1ac10b",
@@ -1655,11 +1749,85 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34e45a41-c7c5-47ca-9957-f4511df06944",
+   "cell_type": "markdown",
+   "id": "ca404dd2-c186-401f-9941-10f9f0cddbd0",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "fingerprint(x) = [0..2^k - 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6966b343-0582-4b17-a865-e704ccbfbf0e",
+   "metadata": {},
+   "source": [
+    "$h_1(x) = hash(x)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fce2f32-8705-4055-ae15-2d52bcebcf08",
+   "metadata": {},
+   "source": [
+    "$h_2(x)=h_1(x)\\ xor\\ hash(fp(x))$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a21266d-2ce2-487e-bcd1-30dbc535780f",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e24936b-d917-42f9-99db-548f23d33f26",
+   "metadata": {},
+   "source": [
+    "i xor hash(fp(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b20736a5-307b-47ce-bf40-4a363ea88c60",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a64d39b-8023-4e55-8da4-54651d087537",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78cf6b6d-02a7-48a7-92c3-23d4e4a1dd88",
+   "metadata": {},
+   "source": [
+    "k = log(1 / e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c556127-d17d-4e4c-8400-00111bf38f9a",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c89c5ed-3207-4662-8ec4-afb675392254",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "052b437d-0197-4dd0-8b20-ba6f7619d3bc",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9efa2b34-f9a1-4a85-a975-db1abb111b91",
+   "metadata": {},
    "source": []
   }
  ],
